--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.13.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^0.4.0",
